GNOME Bugzilla – Bug 727576
"make available offline" unserviceable
Last modified: 2014-04-25 03:27:48 UTC
I'm unable to retrieve videos that have been "completely loaded" say from youtube or other http source after using the "make available off-line" feature. totem 3.10 had the save a copy feature that would bring up a window and ask where to save the file. 3.12 does it differently, however im clueless as to where the file is stored. i tried the obvious of course Videos, Downloads, Documents, cant seem to locate the file.
(In reply to comment #0) > I'm unable to retrieve videos that have been "completely loaded" say from > youtube or other http source after using the "make available off-line" feature. > totem 3.10 had the save a copy feature that would bring up a window and ask > where to save the file. > 3.12 does it differently, It actually works pretty much the same way... > however im clueless as to where the file is stored. i > tried the obvious of course Videos, Downloads, Documents, cant seem to locate > the file. Is the menu item clickable at all? Where is the file from to reproduce the problem? Is nautilus installed?
ok sorry for the delay i did some screen-casting. Hope it helps. notice even after i selected "make available offline" it's still click or not greyed out. not sure if that how it normally works. http://youtu.be/Lolbv2V6Sl4 https://www.youtube.com/watch?feature=player_detailpage&v=Lolbv2V6Sl4 you'll also notice im running fed 20 with COPR builds
It's in ~/.cache/totem/media, with a weird name, not in ~/Videos. You can access it from the "Recent" view in Videos.
Ok. I had to create the /totem/media in the ~/.cache/totem/media directory it was not there by default. the loaded files were just in ~/.cache. After creating the directory the file does appear in the directory. After playing the file it shows up in Recent view of totem but in my case it's unable to be played back from the recent view; thats files i've made available offline. Guess i could just relocate them from the media directory.
(In reply to comment #4) > Ok. I had to create the /totem/media in the ~/.cache/totem/media directory it > was not there by default. The directory should have been created automatically. It seems that this part of the code went missing :( Fixed for the next GNOME 3.12 release: commit 0001090dc34e9623ae86f7629f0318c5a5017352 Author: Bastien Nocera <hadess@hadess.net> Date: Thu Apr 24 18:19:22 2014 +0200 save-file: Fix creation of cache directory To hard-link a file to our cache directory, we'd better create it as well, otherwise it's just not going to work. See https://bugzilla.gnome.org/show_bug.cgi?id=727576 > the loaded files were just in ~/.cache. After > creating the directory the file does appear in the directory. After playing the > file it shows up in Recent view of totem but in my case it's unable to be > played back from the recent view; thats files i've made available offline. > Guess i could just relocate them from the media directory. There was a bug in GStreamer where the files would get copied, but then zero'ed when the file closed. The next stable version of GNOME Videos will require a new enough GStreamer to fix that bug (bug 724373). Looks like I was a bit too quick in closing this bug, thanks for following up.
no worries.