save-file: Fix creation of cache directory

To hard-link a file to our cache directory, we'd better create it as
well, otherwise it's just not going to work.

See https://bugzilla.gnome.org/show_bug.cgi?id=727576